# EvidenceGraphGen

./: .gitignore  requirements.txt
MoDora-main/MoDora-backend/: pyproject.toml  test_paddle_mp.py
MoDora-main/MoDora-backend/docs/: 代码规范.md  架构文档.md
MoDora-main/MoDora-backend/src/modora/api/: app.py
MoDora-main/MoDora-backend/src/modora/api/ocr/: router.py
MoDora-main/MoDora-backend/src/modora/api/v1/: chat.py  documents.py  kb.py  model_instances.py  models.py  stats.py  tree.py
MoDora-main/MoDora-backend/src/modora/core/: preprocess.py  settings.py
MoDora-main/MoDora-backend/src/modora/core/domain/: __init__.py  cctree.py  component.py  jobs.py  ocr.py  results.py
MoDora-main/MoDora-backend/src/modora/core/interfaces/: llm.py  media.py  ocr.py
MoDora-main/MoDora-backend/src/modora/core/prompts/: __init__.py  enrichment.py  evaluation.py  hierarchy.py  metadata.py  recompose.py  retrieval.py
MoDora-main/MoDora-backend/src/modora/core/services/: __init__.py  constructor.py  document_processing.py  enrichment.py  generator.py  hierarchy.py  kb.py  qa_service.py  stats.py  structure.py  task_store.py
MoDora-main/MoDora-backend/src/modora/core/utils/: __init__.py  config.py  fix_pdf_structure.py  fs.py  paths.py  (+2 more)
MoDora-main/MoDora-backend/src/modora/lab/: cli.py
MoDora-main/MoDora-backend/utils/: analyze_eval.py  analyze_logs.py  analyze_rerun.py  chinese_locator.py  count_tokens.py  debug_crop.py  fix_tree_supplement_location.py  get_badcase.py  map_cache.py  merge_predictions.py  plot_exp_results.py  render_bbox.py  revert_tree_supplement_location.py
(+217 files in other folders)
